--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,25 @@
 @import url(fonts/clear-sans.css);
+
+.alert {
+  padding: 20px;
+  background-color: #fcba03;
+  color: white;
+}
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.closebtn:hover {
+  color: black;
+}
 body {
   margin: 0;
   padding: 0;
