--- a/style/main.css
+++ b/style/main.css
@@ -1,9 +1,10 @@
 @import url(fonts/clear-sans.css);
 
 .alert {
-  padding: 40px;
+  padding: 10px;
   background-color: #fcba03;
   color: white;
+  font-size: 
 }
 
 .closebtn {
